--- a/project.json
+++ b/project.json
@@ -1,4 +1,6 @@
 {
   "engine": "cocos-creator-js",
-  "packages": "packages"
+  "packages": "packages",
+  "version": "2.2.2",
+  "id": "861f85b9-49de-4272-b0ff-dbf34d38d733"
 }
