--- a/settings/project.json
+++ b/settings/project.json
@@ -39,8 +39,12 @@
     ]
   ],
   "design-resolution-height": 640,
-  "design-resolution-width": 960,
-  "excluded-modules": [],
+  "design-resolution-width": 1350,
+  "excluded-modules": [
+    "Geom Utils",
+    "3D",
+    "3D Primitive"
+  ],
   "facebook": {
     "appID": "",
     "audience": {
@@ -52,7 +56,7 @@
     }
   },
   "fit-height": true,
-  "fit-width": false,
+  "fit-width": true,
   "group-list": [
     "default",
     "toma",
@@ -61,13 +65,14 @@
     "right",
     "middle"
   ],
-  "last-module-event-record-time": 1577891695280,
+  "last-module-event-record-time": 1578732779230,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
-  "start-scene": "current",
-  "use-customize-simulator": false,
-  "use-project-simulator-setting": false
+  "use-customize-simulator": true,
+  "use-project-simulator-setting": false,
+  "assets-sort-type": "name",
+  "start-scene": "current"
 }
